@@ -1,11 +1,5 @@
 AUX bashrc 635 SHA256 a123aaa2fd47326f33dfe9c8bac06adfcbbcc8d30afd75046ddf7e56bd55f9cd SHA512 9f415083ce36a6cdc318fff343b05281974b2d416c2921eb014447dc587ddd65e3263fa761a89f2341b991cc782b7d37593d6c4bc50e2d18a61db245af3340d3 WHIRLPOOL d4d197662e506519f4b964c596964b720e43c8b230dc28575c677e9c66a215700128908ad18b0af3a68b0d0b2b1fbbd35b30af416935f35b276c6dae226ce465
-DIST gentoo-sources-kernelimage-4.19.71.tar.xz 38645292 SHA256 b29a8adeee7d2a0acfa5e354e4045cd7aaf64fbf58aca81903e95559a2362b27 SHA512 87a87da7bd038dbedfd26685e670062513a94f438cb604b05f495710b99588dbb11621d68a28521a86fbe4a219a94f238d37086ca41084405624d39158b2f0be WHIRLPOOL 894ab8cbf396f23840b0ef2078c745b383dd6177b95b314af53e2d17787197ed1590d0bffd4d83dd100d3abd7fb49b11b4eee51f8c0e442be6ee060a43a1b53c
-DIST gentoo-sources-kernelimage-4.19.72.tar.xz 55078128 SHA256 682b87b307fdd85f2b0502d9290f90dab7be1c39243515faadfce7304b989e6c SHA512 39714b46fae62a9b01a6d642ec4fbbfabeb4d8c02888dc63273e33d18c6539bdde6c7b636473dab5185000fb136bfb6377320c47cad58c1579c1f0893537d373 WHIRLPOOL 3f6693eefc6edb55dbba62ab97610629c717557c5745ea800c94f650bb50abda1236293828b774e55442b57500a19977a5f4e087dcc31383cda5ded9ffc749f9
-DIST gentoo-sources-kernelimage-4.19.73.tar.xz 55008900 SHA256 d84c1a4a23470c4707591c361cf206634da896a13f2b759cade32cbc7ce6a720 SHA512 b42a5d68367238c80fc33d8586e8df8c71b4631c7a07fa79243ed6b326b3eed7a78364fab2eaedea310b313238e19e413fb5fc331bcb94859d0e7e9eb737f32c WHIRLPOOL 3a6106ce000462748b55e60e1f8e26573e071286d486a2f8dedb2dc11a4a4ddc34a44d4e9de86fdad779e34b9c01dab23d08276e40a4baaf36d53045b7650daa
-DIST gentoo-sources-kernelimage-4.19.74.tar.xz 55618864 SHA256 1f6a3a53c59e43dfcf05d47509b8743cc276586aef4e46ea509168f14a031834 SHA512 0f4653323e313f3ca904131d15d6cd0f8fed74ae3fc407fd1290746066a5c4b76bd59ba902fb8a00fb1fc322a3aca33bfde57234068de6021b81526027e016b0 WHIRLPOOL 3ba320c87dd8c3e551feb75bebc220aa47a67fc41cea7538465c95ee08b627b9e2c89b9575f1d053aa3861b4dbb1ad9acb949e72aa40b75e2b87f582e3325d0f
-EBUILD gentoo-sources-kernelimage-4.19.71.ebuild 995 SHA256 12d0a19c4662b3b1484b86e8f68ff6177637ae3b91ff9473d7b9588ab2df4daf SHA512 72595cacf57ebbc103d3c207c6a9440c98948284a9a8b1d0a749608d0eb11041d3c645a935164cb5ea115a726e64bd532863bc4ada6b9a1e5647f96d2c002198 WHIRLPOOL 5325309680399bf50a578f888f68797c9d4e476aee0f2f6c75259836ebacf2bec13a1eb8bcea21bab3f7dc700fc795b324317644be49231ff1b749c367e31f13
-EBUILD gentoo-sources-kernelimage-4.19.72.ebuild 995 SHA256 12d0a19c4662b3b1484b86e8f68ff6177637ae3b91ff9473d7b9588ab2df4daf SHA512 72595cacf57ebbc103d3c207c6a9440c98948284a9a8b1d0a749608d0eb11041d3c645a935164cb5ea115a726e64bd532863bc4ada6b9a1e5647f96d2c002198 WHIRLPOOL 5325309680399bf50a578f888f68797c9d4e476aee0f2f6c75259836ebacf2bec13a1eb8bcea21bab3f7dc700fc795b324317644be49231ff1b749c367e31f13
-EBUILD gentoo-sources-kernelimage-4.19.73.ebuild 996 SHA256 376c4c1582fdd9bf4062b2f6beb52210eb0ed48ef04df6d178f3e6f35173173d SHA512 90ec350d4511c36885f9e0e37b81f16bf33aa626cab4bf89f0b284ee9e6ff6cdbe47d4e4a2ad028a832f64ae87a5838103dd92f22f5ebad594b2454a9fedf6db WHIRLPOOL 62b2e54d43a3d1eec6effacc23964372e4c35dc98037d41300fa96b41fcf054c957296f95086ede2ae74d2b54844a846fdd0decc6fc2884f29a78a7df09a9963
-EBUILD gentoo-sources-kernelimage-4.19.74.ebuild 996 SHA256 376c4c1582fdd9bf4062b2f6beb52210eb0ed48ef04df6d178f3e6f35173173d SHA512 90ec350d4511c36885f9e0e37b81f16bf33aa626cab4bf89f0b284ee9e6ff6cdbe47d4e4a2ad028a832f64ae87a5838103dd92f22f5ebad594b2454a9fedf6db WHIRLPOOL 62b2e54d43a3d1eec6effacc23964372e4c35dc98037d41300fa96b41fcf054c957296f95086ede2ae74d2b54844a846fdd0decc6fc2884f29a78a7df09a9963
-MISC ChangeLog 1183 SHA256 a412b5a3a41e3eaf8b345bb8da96c5e173703b4d3d90de4820eb038df91b6b8d SHA512 ab0c018470c54252fe12831923ab48a01018bcbcbe4b546f1c8945f73dc12b1cb4b70fc25ebba0487bb531c4554db359d42d62227bffa49f904bc9622f16693c WHIRLPOOL 69dc892854eec8f2182154edc798e8ef87ebb20a753f6a5ae679fa08686e2d9be14fab33dab2db58d1c6a45da404a57eac7c2fa7eb016ec75c3a52f00943e5e0
+DIST gentoo-sources-kernelimage-4.19.79.tar.xz 55641164 SHA256 42b9be5df13f683a5b76d34ca9a276e64eb67365eaf2c811877bd33715b2a288 SHA512 e015b52c7e699b50c7d1fb6fd21155ccd25534b393347f4732a7494c566911b0c0cf2648fe708bf8d78d8f3184390ee5e1c8ef122b3d431bf8395e886f7eb8da WHIRLPOOL 7980cd82f05661063bcb78c12937f885f26ed6a35abfed620278581a31bb0f55ed29dd1245f3b0a43bd10e87bda37e5ed1963a334bb02c5da192a27d6941a31b
+EBUILD gentoo-sources-kernelimage-4.19.79.ebuild 996 SHA256 376c4c1582fdd9bf4062b2f6beb52210eb0ed48ef04df6d178f3e6f35173173d SHA512 90ec350d4511c36885f9e0e37b81f16bf33aa626cab4bf89f0b284ee9e6ff6cdbe47d4e4a2ad028a832f64ae87a5838103dd92f22f5ebad594b2454a9fedf6db WHIRLPOOL 62b2e54d43a3d1eec6effacc23964372e4c35dc98037d41300fa96b41fcf054c957296f95086ede2ae74d2b54844a846fdd0decc6fc2884f29a78a7df09a9963
+MISC ChangeLog 1593 SHA256 b1138df48994a49e77a5e5a74c52585a6afafc3f162b93fbc640a4743ed54e00 SHA512 0b4210504820cba9dc597b1fd89d851807f62c8ff5a6d0b0c3a7766167f1b649e289b183b8373dc10620afd5d8288fa6c8aac8a6511b6c539b023a8653123d39 WHIRLPOOL 221014256a53c3266e0f4a58f406ca30f87ab62c093cc82ef18ba30f71ebb5cdd3b590210d41af32e6a9d53cefe5974523268cb155b28ac4ca7a457edc4cf1a7
 MISC metadata.xml 252 SHA256 0df10ba8b53ce829ea0fdf3b8f808ae371f24235ab02a7f94967fe0c2d7845bf SHA512 1f9486ce3b84ae866622da9d6e26a3e873467fe1607826fca6b0cc2f6091b0c8f94c4cff6717c57419867ac74bd371c0ef8f035ffb1ffcb1c4cbfae86f544ab5 WHIRLPOOL f993df191d6ce02786a5a2234510fbae80c9e1e1661c2a89cfe71be92cf5668fda737e28faedb21765de32526df074b3ef4eef6f5110020aa8232b1cb85aa7dc
