@@ -1,3 +1,13 @@
+*gentoo-sources-kernelimage-4.19.79 (21 Oct 2019)
+
+  21 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
+  +gentoo-sources-kernelimage-4.19.79.ebuild,
+  -gentoo-sources-kernelimage-4.19.71.ebuild,
+  -gentoo-sources-kernelimage-4.19.72.ebuild,
+  -gentoo-sources-kernelimage-4.19.73.ebuild,
+  -gentoo-sources-kernelimage-4.19.74.ebuild:
+  sys-kernel/gentoo-sources-kernelimage: version bump to 4.19.79 - remove old.
+
 *gentoo-sources-kernelimage-4.19.74 (14 Oct 2019)
 
   14 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
